@@ -9,6 +9,7 @@ Features
 Bugfixes
 --------
 
+* Fix handling of duplicate plugins on Windows
 * Allow else clause in post-list plugin. (Issue #3436)
 
 New in v8.1.1
